--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
+    "openai": "^4.52.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
