--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "groq-sdk": "^0.5.0",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
     "openai": "^4.52.0",
