--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "groq-sdk": "^0.5.0",
     "lucide-react": "^0.396.0",
+    "mermaid": "^10.9.1",
     "next": "14.2.4",
     "openai": "^4.52.0",
     "react": "^18",
