--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "llm-chunk": "^0.0.1",
     "lucide-react": "^0.396.0",
     "mermaid": "^10.9.1",
-    "next": "14.2.4",
+    "next": ">=14.2.10",
     "openai": "^4.65.0",
     "react": "^18",
     "react-dom": "^18",
@@ -29,6 +29,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "micromatch": ">=4.0.8",
     "@shadcn/ui": "^0.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
