Add json viewer and directory and prompt

--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.1",
+    "@qdrant/js-client-rest": "^1.12.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "form-data": "^4.0.1",
+    "formidable": "^3.5.1",
     "groq-sdk": "^0.5.0",
     "llm-chunk": "^0.0.1",
     "lucide-react": "^0.396.0",
     "mermaid": "^10.9.1",
+    "multer": "^1.4.5-lts.1",
     "next": ">=14.2.10",
     "openai": "^4.65.0",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
+    "react-json-view": "^1.21.3",
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -31,7 +38,10 @@
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
+    "@types/formidable": "^3.4.5",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
