--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.1",
+    "@langchain/community": "^0.3.5",
+    "@langchain/core": "^0.3.11",
     "@qdrant/js-client-rest": "^1.12.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -18,6 +20,7 @@
     "form-data": "^4.0.1",
     "formidable": "^3.5.1",
     "groq-sdk": "^0.5.0",
+    "langchain": "^0.3.2",
     "llm-chunk": "^0.0.1",
     "lucide-react": "^0.396.0",
     "mermaid": "^10.9.1",
@@ -29,7 +32,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
-    "react-json-view": "^1.21.3",
+    "react-json-view-lite": "^1.5.0",
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
